tests/valid-gd-scripts/class_to_extend.gd
func _init(a, b):
	pass
