tests/invalid-gd-scripts/mixed_tabs_spaces.gd
class X:
	func foo(a,
			 b):
		pass
